--- a/src/client/components/IconText/index.scss
+++ b/src/client/components/IconText/index.scss
@@ -4,12 +4,11 @@
   outline: none;
   display: flex;
   cursor: pointer;
+  font-size: 18rem;
+  user-select: none;
   align-items: center;
   padding: calc(var(--space) * .5);
   &__icon {
     margin-right: 8px;
     &:hover {
-      background-color: transparent !important; } }
-  &__text {
-    font-size: 18rem;
-    user-select: none; } }
+      background-color: transparent !important; } } }
