--- a/src/client/components/AddAlbum/index.scss
+++ b/src/client/components/AddAlbum/index.scss
@@ -2,49 +2,9 @@
   display: grid;
   gap: var(--space);
   grid-template-columns: 1fr 3fr;
-  &__list {
-    display: flex; }
-  &__album {
-    &-cover {
-      width: 300rem;
-      height: 300rem; }
-    &-title {
-      font-size: 25rem; } }
-  &__input {
-    border: 0;
-    margin: 0;
-    padding: 0;
-    width: auto;
-    outline: none;
-    display: block;
-    background-color: transparent; }
-  &__plus {
-    width: 14rem;
-    display: none;
-    height: 14rem;
-    font-size: 14rem;
-    margin-left: 4rem; }
-  &__text {
-    display: flex;
-    align-items: center;
-    &:hover i {
-      display: block; } }
-  &__item {
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    &-upper {
-      font-weight: 700;
-      &-num {
-        margin-right: 4rem; }
-      &-input {
-        font-weight: 700; } }
-    &-lower {
-      font-size: 15rem;
-      margin-top: 4rem; }
-    &-right {
-      color: var(--text-color-light); } }
+  &__title {
+    font-weight: 700;
+    font-size: 25rem; }
   &__add {
     margin: 0;
     width: 146rem;
