--- a/src/client/components/Cover/index.scss
+++ b/src/client/components/Cover/index.scss
@@ -1,38 +1,43 @@
 .Cover {
   &:hover &__img {
-    filter: blur(10px); }
+    filter: blur(2px); }
   &:hover &__black-box {
-    background-color: rgba(#000, 0.8); }
+    opacity: 0.8; }
   &:hover &__button {
     opacity: 1; }
   &__landscape {
     &::before {
       padding-top: 56.25%; } }
+  &__img,
+  &__button,
+  &__black-box {
+    transition-duration: var(--transition-duration); }
+  &__img {
+    transition-property: filter; }
   &__black-box {
     top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    cursor: pointer;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
     position: absolute;
-    background-color: transparent; }
+    background-color: #000;
+    transition-property: opacity; }
   &__button {
-    z-index: 2;
+    z-index: 1;
     opacity: 0;
     padding: 0;
     width: 50%;
     height: 50%;
     position: absolute;
     align-items: center;
-    transition: 3s ease-in;
     flex-direction: column;
     justify-content: center;
     background-color: transparent;
-    transition-property: background-color, opacity;
+    transition-property: background-color, opacity !important;
     &:hover {
       background-color: rgba(#fff, 0.2) !important; }
     &:active {
-      background-color: rgba(#fff, 0.4) !important; }
+      background-color: rgba(#fff, 0.3) !important; }
     &:nth-child(2) {
       top: 0;
       left: 0; }
