--- a/src/client/css/classes.scss
+++ b/src/client/css/classes.scss
@@ -23,6 +23,9 @@
 .MarginBottom {
   margin-bottom: var(--space); }
 
+.MarginBottomThreeQuart {
+  margin-bottom: calc(var(--space) * 0.75); }
+
 .MarginBottomHalf {
   margin-bottom: calc(var(--space) * 0.5); }
 
