--- a/src/client/components/AddAlbum/AddAlbumList/index.scss
+++ b/src/client/components/AddAlbum/AddAlbumList/index.scss
@@ -1,23 +1,17 @@
 .AddAlbumList {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  &__item {
+  &__label {
+    margin-bottom: calc(var(--space) * 0.25); }
+  &__main {
     display: flex;
-    align-items: center;
+    align-items: center; }
+  &__items {
+    width: 100%;
+    display: grid;
+    gap: calc(var(--space) * 0.5);
+    grid-template-columns: 1fr 1fr;
+    margin-right: calc(var(--space) * 0.25); }
+  &__item {
+    width: 100%;
     border-radius: var(--border-radius);
-    &-input {
-      border: 0;
-      width: 100%;
-      outline: none;
-      padding: 3rem;
-      display: block;
-      font-size: 15rem;
-      background-color: transparent; } }
-  &__icon {
-    width: 15rem;
-    height: 15rem;
-    font-size: 15rem;
-    margin-right: 3rem;
-    cursor: pointer !important;
-    background-color: transparent !important; } }
+    border: 1px solid var(--border-color);
+    background-color: var(--elevated-color); } }
