--- a/src/client/components/AddAlbum/AddAlbumText/index.scss
+++ b/src/client/components/AddAlbum/AddAlbumText/index.scss
@@ -1,21 +1,11 @@
 .AddAlbumText {
-  position: relative;
-  &__input {
-    border: 0;
-    margin: 0;
-    width: 100%;
-    display: block;
-    font-size: 15rem;
-    margin-right: 4rem;
-    padding-right: var(--space);
-    background-color: transparent; }
-  &__icon {
-    top: 50%;
-    right: 3rem;
-    width: 15rem;
-    height: 15rem;
-    font-size: 15rem;
-    position: absolute;
-    cursor: auto !important;
-    transform: translateY((-50%));
-    background-color: transparent !important; } }
+  outline: none;
+  display: block;
+  &__text {
+    margin-bottom: 2rem; }
+  &__main {
+    display: flex;
+    position: relative;
+    align-items: center;
+    &-icon {
+      margin-left: calc(var(--space) * 0.25); } } }
