--- a/src/client/components/Add/AddAlbum/index.scss
+++ b/src/client/components/Add/AddAlbum/index.scss
@@ -1,4 +1,5 @@
 .AddAlbum {
   &__title {
-    font-weight: 700;
-    font-size: 22rem; } }
+    max-width: 100%;
+    font-size: 22rem;
+    font-weight: 700; } }
