--- a/src/client/components/DocLink/index.scss
+++ b/src/client/components/DocLink/index.scss
@@ -1,5 +1,6 @@
 .DocLink {
   text-decoration: none;
-  &:hover {
+  &:hover,
+  &:focus {
     color: #1a73e8;
     text-decoration: underline; } }
