--- a/src/client/css/classes.scss
+++ b/src/client/css/classes.scss
@@ -20,6 +20,9 @@
 .MarginTopHalf {
   margin-top: calc(var(--space) * 0.5); }
 
+.MarginTopQuart {
+  margin-top: calc(var(--space) * 0.25); }
+
 .MarginBottom {
   margin-bottom: var(--space); }
 
