--- a/src/client/components/Add/AddSong/index.scss
+++ b/src/client/components/Add/AddSong/index.scss
@@ -1,34 +1,48 @@
 .AddSong {
+  &:hover &__main-mix {
+    opacity: 1; }
   &__main {
     display: flex;
     align-items: center;
     justify-content: space-between;
     &-left {
-      width: 100%;
       display: flex;
       align-items: center; }
     &-text {
-      width: 100%; }
+      width: 100%;
+      margin-left: calc(var(--space) * 0.25); }
     &-trackNumber {
       display: flex;
-      font-weight: 700;
       align-items: flex-end;
-      margin-right: calc(var(--space) * 0.5);
-      &-input {
-        width: 2ch;
-        text-align: right; }
-      &-dot {
-        font-size: 15rem;
-        margin-bottom: 1rem; } }
-    &-right {
-      display: flex; }
-    &-mix,
-    &-duration {
-      margin-left: calc(var(--space) * 0.5); }
-    &-mix {
-      width: 50rem;
       &-input {
         font-weight: 700;
-        &::placeholder {
-          font-weight: 400;
-          color: var(--text-color-light);} } } } }
+        text-align: right; }
+      &-dot {
+        font-weight: 700;
+        font-size: 15rem; } }
+    &-mix {
+      opacity: 0;
+      min-width: 3ch;
+      color: var(--text-color-light);
+      margin-left: calc(var(--space) * 0.5);
+      &:focus {
+        opacity: 1; } }
+    &-right {
+      display: flex; }
+    &-duration {
+      font-size: 15rem;
+      color: var(--text-color-light);
+      margin-left: calc(var(--space) * 0.5); } }
+  &__lists {
+    display: flex;
+    align-items: center;
+    &-feat {
+      font-size: 15rem;
+      margin-top: 3rem;
+      margin-left: 10rem;
+      margin-right: -5rem;
+      color: var(--text-color-light);
+      &-list {
+        margin-left: calc(var(--space) * 0.5); } } }
+  &__remixers {
+    display: block; } }
