--- a/src/client/components/Add/AddCover/index.scss
+++ b/src/client/components/Add/AddCover/index.scss
@@ -30,13 +30,6 @@
     position: absolute;
     background-color: #000;
     transition-property: opacity; }
-  &__buttons {
-    top: 0;
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    transition-property: opacity; }
   &__form {
     top: 0;
     width: 100%;
@@ -60,19 +53,21 @@
       transition-property: background-color;
       &:hover {
         background-color: rgba(#fff, 0.2); } } }
-  &__button {
-    height: 50%;
+  &__buttons {
+    top: 0;
+    opacity: 0;
     width: 100%;
+    height: 100%;
+    position: absolute;
+    transition-property: opacity; }
+  &__button {
     position: relative;
+    height: calc(100% / 3);
     transition-property: background-color;
     &:hover {
       background-color: rgba(#fff, 0.2); }
     &:active {
       background-color: rgba(#fff, 0.3); }
-    &-top {
-      top: 0; }
-    &-bottom {
-      bottom: 0; }
     &-input {
       top: 0;
       opacity: 0;
@@ -104,17 +99,4 @@
     text-align: center;
     transform: translateY(50%);
     transition-property: opacity;
-    color: var(--text-color-white);
-    &-top {
-      top: 25%; }
-    &-bottom {
-      bottom: 25%; } }
-  &__button {
-    width: 100%;
-    height: 50%;
-    cursor: pointer;
-    position: absolute;
-    &-top {
-      top: 0; }
-    &-bottom {
-      bottom: 0; } } }
+    color: var(--text-color-white); } }
