--- a/src/client/index.scss
+++ b/src/client/index.scss
@@ -36,3 +36,30 @@
 
   --transition-duration: 0.2s;
 }
+
+html {
+  box-sizing: border-box;
+  color: var(--text-color);
+  font-size: var(--font-size);
+  font-family: var(--font-family);
+  line-height: var(--line-height);
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased; }
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  color: inherit;
+  font-size: inherit;
+  box-sizing: inherit;
+  font-family: inherit;
+  line-height: inherit; }
+
+a {
+  text-decoration: none;
+  &:hover,
+  &:focus,
+  &:active {
+    text-decoration: none; } }
