--- a/src/client/components/ArtistPage/index.scss
+++ b/src/client/components/ArtistPage/index.scss
@@ -12,7 +12,7 @@
 			position: absolute;
 			margin-bottom: calc(var(--space) * 0.2);
 			&-name,
-			&-stats {
+			&-text {
 				color: var(--text-color-white); }
 			&-name {
 				display: flex;
@@ -30,7 +30,7 @@
 					margin-left: calc(var(--space) * 0.5);
 					&:hover {
 						background-color: rgba(#000, 0.2) !important; } } }
-			&-stats {
+			&-text {
 				font-size: 17rem; } }
 		&-black {
 			top: 0;
