--- a/src/client/components/Progress/index.scss
+++ b/src/client/components/Progress/index.scss
@@ -4,6 +4,22 @@
 	height: 16rem;
 	align-items: center;
 	&__slider {
-		height: var(--space-quart);
-		margin: 0 var(--space-half);
-		border-radius: var(--border-radius); } }
+		width: 100%;
+		height: 10rem;
+		margin: 0 10rem;
+		appearance: none;
+		&:focus {
+			outline: none; }
+		&::-webkit-slider-runnable-track {
+			border: 0;
+			width: 100%;
+			height: 10rem;
+			cursor: pointer;
+			border-radius: var(--border-radius); }
+		&::-webkit-slider-thumb {
+			border: 0 solid #000;
+			width: 10rem;
+			height: 10rem;
+			cursor: pointer;
+			appearance: none;
+			margin-top: -3px; } } }
