--- a/src/client/components/Player/index.scss
+++ b/src/client/components/Player/index.scss
@@ -41,6 +41,8 @@
 		&-album {
 			font-size: 20rem;
 			font-weight: 500; }
+		&-progress {
+			background-color: #e0e0e0; }
 		&-artists {
 			font-size: 20rem;
 			font-weight: 400;
