--- a/src/client/components/Progress/index.scss
+++ b/src/client/components/Progress/index.scss
@@ -15,6 +15,7 @@
 			width: 100%;
 			height: 10rem;
 			cursor: pointer;
+			background-color: #e0e0e0;
 			border-radius: var(--border-radius); }
 		&::-webkit-slider-thumb {
 			border: 0 solid #000;
@@ -22,4 +23,9 @@
 			height: 10rem;
 			cursor: pointer;
 			appearance: none;
-			margin-top: -3px; } } }
+			border-radius: 100%;
+			box-shadow:
+				0 0 4px rgba(#000, 0.14),
+				0 0 3px -2px rgba(#000, 0.12),
+				0 0 8px rgba(#000, 0.2);
+			background-color: #333333; } } }
