--- a/src/client/components/ArtistPage/index.scss
+++ b/src/client/components/ArtistPage/index.scss
@@ -11,6 +11,7 @@
 			z-index: 2;
 			position: absolute;
 			margin-bottom: calc(var(--space) * 0.2);
+			&-add,
 			&-name,
 			&-text {
 				color: var(--text-color-white); }
@@ -22,13 +23,10 @@
 				&-text {
 					font-size: 60rem; }
 				&-add {
-					width: 30rem;
-					height: 30rem;
 					font-size: 30rem;
 					margin-top: 7rem;
 					margin-left: calc(var(--space) * 0.5);
-					&:hover {
-						background-color: rgba(#000, 0.2) !important; } } }
+					background-color: transparent !important; } }
 			&-text {
 				font-size: 17rem; } }
 		&-black {
