--- a/src/client/components/Button/index.scss
+++ b/src/client/components/Button/index.scss
@@ -1,5 +1,6 @@
 .Button {
 	display: flex;
+	outline: none;
 	cursor: pointer;
 	border: 1px solid;
 	align-items: center;
@@ -16,10 +17,11 @@
 	&__icon {
 		width: 20rem;
 		height: 20rem;
+		color: inherit;
 		font-size: 20rem;
 		margin-bottom: 2rem; }
 	&__space {
-		width: 2rem;
+		width: 3rem;
 		height: 100%; }
 	&__text {
 		display: block;
