--- a/src/client/components/Progress/index.scss
+++ b/src/client/components/Progress/index.scss
@@ -8,6 +8,7 @@
 		height: 10rem;
 		margin: 0 10rem;
 		appearance: none;
+		overflow: hidden;
 		&:focus {
 			outline: none; }
 		&::-webkit-slider-runnable-track {
@@ -23,9 +24,6 @@
 			height: 10rem;
 			cursor: pointer;
 			appearance: none;
+			position: relative;
 			border-radius: 100%;
-			box-shadow:
-				0 0 4px rgba(#000, 0.14),
-				0 0 3px -2px rgba(#000, 0.12),
-				0 0 8px rgba(#000, 0.2);
 			background-color: #333333; } } }
