--- a/src/client/components/AlbumPage/index.scss
+++ b/src/client/components/AlbumPage/index.scss
@@ -20,8 +20,7 @@
 		font-weight: 500; }
 	&__genres {
 		font-size: 17rem;
-		font-weight: 400;
-		margin-bottom: calc(var(--space) * 0.5 - 1px); }
+		font-weight: 400; }
 	&__footer-text {
 		font-size: 14rem;
 		text-transform: uppercase;
