--- a/src/client/components/GenrePage/index.scss
+++ b/src/client/components/GenrePage/index.scss
@@ -1,7 +1,6 @@
 .GenrePage {
 	font-size: 30rem;
 	text-align: center;
-	background: #6190e8;
 	box-shadow: var(--box-shadow);
-	padding: calc(var(--space) * 1.5);
+	padding: var(--space-one-half);
 	background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea); }
