--- a/src/client/index.scss
+++ b/src/client/index.scss
@@ -29,6 +29,7 @@
 	--space-three-quart: calc(var(--space) * 0.75);
 	--space-half: calc(var(--space) * 0.5);
 	--space-quart: calc(var(--space) * 0.25);
+	--space-fifth: calc(var(--space) * 0.2);
 
 	--button-size: 27rem;
 
