--- a/src/client/components/Browse/BrowseHome/index.scss
+++ b/src/client/components/Browse/BrowseHome/index.scss
@@ -29,12 +29,12 @@
 			display: flex;
 			margin-left: -9px;
 			align-items: center;
-			margin-bottom: calc(var(--space) * 0.5);
+			margin-bottom: var(--space-half);
 			&:last-child {
 				margin-bottom: 0; }
 			&-num {
 				width: 30px;
 				font-size: 22rem;
-				margin-right: calc(var(--space) * 0.5); }
+				margin-right: var(--space-half); }
 			&-play {
-				margin-right: calc(var(--space) * 0.25); } } } }
+				margin-right: var(--space-quart); } } } }
