--- a/src/client/components/Loading/index.scss
+++ b/src/client/components/Loading/index.scss
@@ -1,16 +1,16 @@
 .Loading {
-  height: 5rem;
-  width: 100vw;
-  position: absolute;
+	height: 5rem;
+	width: 100vw;
+	position: absolute;
 	overflow-x: hidden;
 	&__line {
-		height: 5rem;
 		width: 150%;
 		opacity: 0.4;
-		background:#4a8df8;
-		position: absolute; }
+		height: 5rem;
+		position: absolute;
+		background: #4a8df8; }
 	&__subline {
-		height: 5rem; 
+		height: 5rem;
 		position: absolute;
 		background: #4a8df8; }
 	&__asc {
@@ -19,11 +19,23 @@
 		animation: decrease 2s 0.5s infinite; } }
 
 @keyframes increase {
-	from { left: -5%; width: 5%; }
-	to { left: 130%; width: 100%;}
+	from {
+		left: -5%;
+		width: 5%;
+	}
+	to {
+		left: 130%;
+		width: 100%;
+	}
 }
 
 @keyframes decrease {
-	from { left: -80%; width: 80%; }
-	to { left: 110%; width: 10%;}
+	from {
+		left: -80%;
+		width: 80%;
+	}
+	to {
+		left: 110%;
+		width: 10%;
+	}
 }
