--- a/src/client/components/Progress/index.scss
+++ b/src/client/components/Progress/index.scss
@@ -3,27 +3,30 @@
 	display: flex;
 	height: 16rem;
 	align-items: center;
+	&__text {
+		margin-top: 1rem; }
 	&__slider {
+		--dim: 10rem;
 		width: 100%;
-		height: 10rem;
-		margin: 0 10rem;
 		appearance: none;
 		overflow: hidden;
+		height: var(--dim);
+		margin: 0 var(--space-half);
 		&:focus {
 			outline: none; }
 		&::-webkit-slider-runnable-track {
 			border: 0;
 			width: 100%;
-			height: 10rem;
+			height: 100%;
 			cursor: pointer;
 			background-color: #e0e0e0;
 			border-radius: var(--border-radius); }
 		&::-webkit-slider-thumb {
-			border: 0 solid #000;
-			width: 10rem;
-			height: 10rem;
+			height: 100%;
 			cursor: pointer;
 			appearance: none;
+			width: var(--dim);
 			position: relative;
 			border-radius: 100%;
-			background-color: #333333; } } }
+			border: 0 solid #000;
+			background-color: #333; } } }
