--- a/src/client/components/Player/index.scss
+++ b/src/client/components/Player/index.scss
@@ -24,7 +24,7 @@
 		color: var(--text-color);
 		font-size: var(--font-size); }
 	&__main {
-		width: 50%;
+		width: 600px;
 		display: flex;
 		align-items: center;
 		flex-direction: column;
