--- a/src/client/index.scss
+++ b/src/client/index.scss
@@ -57,13 +57,11 @@ html {
 	font-size: inherit;
 	box-sizing: inherit;
 	font-family: inherit;
-	line-height: inherit;
-}
+	line-height: inherit; }
 
 a {
 	text-decoration: none;
 	&:hover,
 	&:focus,
 	&:active {
-		text-decoration: none; }
-}
+		text-decoration: none; } }
