--- a/src/client/components/Player/index.scss
+++ b/src/client/components/Player/index.scss
@@ -5,8 +5,7 @@
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	&__main,
-	&__spinner {
+	&__main {
 		top: 50%;
 		left: 50%;
 		position: absolute;
