--- a/src/client/components/Search/index.scss
+++ b/src/client/components/Search/index.scss
@@ -1,15 +1,7 @@
 .Search {
-	height: 100%;
-	width: 1200px;
-	margin: 0 auto;
-	overflow: auto;
-	&__bar,
-	&__content {
-		padding: var(--space); }
 	&__bar {
-		width: 600px;
+		width: 600rem;
 		margin: 0 auto;
-		margin-top: var(--space-double);
 		&-input {
 			border: 0;
 			width: 100%;
@@ -20,5 +12,5 @@
 			border-bottom: 2px solid #333;
 			background-color: transparent; } }
 	&__content {
-		box-shadow: var(--box-shadow);
-		background-color: var(--text-color-white); } }
+		overflow: auto;
+		height: 100%; } }
