--- a/src/client/components/AlbumPage/index.scss
+++ b/src/client/components/AlbumPage/index.scss
@@ -1,9 +1,7 @@
 .AlbumPage {
 	display: grid;
 	gap: var(--space-one-quart);
-	grid-template-columns: 1fr 2fr;
-	@media (max-width: 1200px) {
-		grid-template-columns: 1fr 2fr; }
+	grid-template-columns: 300rem minmax(0, 1fr);
 	@media (max-width: 800px) {
 		display: block; }
 	&__title {
