--- a/src/client/components/ArtistPage/index.scss
+++ b/src/client/components/ArtistPage/index.scss
@@ -1,7 +1,7 @@
 .ArtistPage {
 	&__cover {
 		width: 100%;
-		height: 30vh;
+		height: 50vw;
 		&-img {
 			filter: blur(1px);
 			background-position: top; }
@@ -23,10 +23,16 @@
 				&-text {
 					font-size: 60rem; }
 				&-add {
+					padding: 4rem;
 					font-size: 30rem;
 					margin-top: 7rem;
+					font-size: 28rem;
+					width: var(--info-height);
+					height: var(--info-height);
+					color: var(--text-color-white);
 					margin-left: var(--space-half);
-					background-color: transparent !important; } }
+					&:hover {
+						background-color: rgba(#000, 0.3); } } }
 			&-text {
 				font-size: 17rem; } }
 		&-black {
