--- a/src/client/components/Pages/index.scss
+++ b/src/client/components/Pages/index.scss
@@ -5,5 +5,6 @@
 	@media(max-width: 700px) {
 		height: calc(100vh - var(--header-height) - var(--player-height-mobile)); }
 	&__content {
-		overflow: auto;
+		overflow-x: hidden;
+		overflow-y: scroll;
 		width: var(--content-width); } }
