--- a/src/client/components/Navigation/index.scss
+++ b/src/client/components/Navigation/index.scss
@@ -1,8 +1,7 @@
 .Navigation {
-	width: 100%;
 	display: flex;
 	align-items: center;
-	justify-content: flex-start;
+	justify-content: center;
 	&__link {
 		--text-height: 20rem;
 		width: auto;
