--- a/src/client/components/ArtistPage/index.scss
+++ b/src/client/components/ArtistPage/index.scss
@@ -1,7 +1,8 @@
 .ArtistPage {
 	&__cover {
 		width: 100%;
-		height: 40vw;
+		&::before {
+			padding-top: 56.25%; }
 		&-img {
 			filter: blur(1px);
 			background-position: top; }
