--- a/src/client/components/ArtistPage/index.scss
+++ b/src/client/components/ArtistPage/index.scss
@@ -1,17 +1,18 @@
 .ArtistPage {
 	&__cover {
 		width: 100%;
+		height: 40vh;
 		&::before {
 			padding-top: 56.25%; }
 		&-img {
 			filter: blur(1px);
-			background-position: top; }
+			background-position: center; }
 		&-content {
-			left: 0;
+			left: 50%;
 			bottom: 0;
 			z-index: 2;
 			position: absolute;
-			margin-bottom: var(--space-fifth);
+			transform: translateX(-50%);
 			&-add,
 			&-name,
 			&-text {
@@ -43,9 +44,15 @@
 			height: 100%;
 			position: absolute;
 			background:
-				radial-gradient(ellipse farthest-corner at center center, rgba(#000, 0.2) 20%, rgba(#000, 0.7) 100%)
+				radial-gradient(ellipse farthest-corner at center center, rgba(#000, 0.3) 20%, rgba(#000, 0.7) 100%)
 				repeat scroll 0% 0%; } }
-	&__heading {
-		font-size: 25rem;
-		margin-top: -3px;
-		margin-bottom: var(--space-half); } }
+	&__nav {
+		border-left: 1px solid var(--border-color);
+		&-item {
+			list-style: none;
+			border-right: 1px solid var(--border-color);
+			padding: var(--space-three-quart) var(--space-one-half);
+			&-active {
+				background-color: var(--button-hover-color); } } }
+	&__content {
+		padding-bottom: var(--space); } }
