--- a/src/client/components/Search/index.scss
+++ b/src/client/components/Search/index.scss
@@ -12,5 +12,5 @@
 			border-bottom: 2px solid #333;
 			background-color: transparent; } }
 	&__content {
-		overflow: auto;
-		height: 100%; } }
+		height: 100%;
+		margin-bottom: var(--space-double); } }
